# bec_log_ingestor

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: check-and-lint.yaml  test-and-coverage.yaml
src/: config.rs  elastic_push.rs  example_config.toml  log_msg.rs  main.rs  redis_logs.rs
src/lib/: config.rs  elastic_push.rs  lib.rs  redis_logs.rs
