[package]
name = "bec_log_ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
custom_derive = "0.1.7"
elasticsearch = "9.0.0-alpha.1"
enum_derive = "0.1.7"
msgpack_simple = "1.0.2"
redis = "0.32.4"
rmp = "0.8.14"
rmp-serde = "1.3.0"
rmpv = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = "1.47.0"
