[package]
name = "bec_log_ingestor"
version = "0.1.0"
edition = "2024"

[lib]
name = "bec_log_ingestor"
path = "src/lib/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bec_log_ingestor"
path = "src/bin/app.rs"


[dependencies]
pyo3 = { git = "https://github.com/pyo3/pyo3", features = ["extension-module"] }
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
elasticsearch = "9.0.0-alpha.1"
redis = "0.32.4"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
tokio = "1.47.0"
toml = "0.9.5"
