[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "bec_log_ingestor"
version = "0.1.0"
authors = [{ name = "David Perl", email = "david.perl@psi.ch" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
